...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="zLd-Kf-47E" id="Pvu-WP-vjj"/>
                            <outlet property="delegate" destination="zLd-Kf-47E" id="CXK-Ee-kkl"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Peripherals" id="e0u-7z-1LV">
                        <barButtonItem key="rightBarButtonItem" title="---" id="SA1-d0-8qX">
                            <connections>
                                <action selector="clearData:" destination="zLd-Kf-47E" id="Lbr-mV-iXC"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DrY-Bi-n04">
                                <rect key="frame" x="40" y="112" width="240" height="44"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="becomeCentral" label="becomeCentral"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="QOp-wr-IsW"/>
                                    <constraint firstAttribute="width" constant="240" id="w58-rg-Eqy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Scan For Peripherals">
...
                                    <segue destination="496-hM-mK5" kind="showDetail" identifier="showCentralDetail" id="e6N-bh-gkL"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mMq-Ya-2Yd">
                                <rect key="frame" x="40" y="190" width="240" height="44"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="becomePeripheral"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="rku-1s-FrT"/>
                                    <constraint firstAttribute="height" constant="44" id="z8R-Uk-MgB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Create Peripheral">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                        <integer key="value" value="1"/>
                                    </userDefinedRuntimeAttribute>
...
                                <variation key="widthClass=compact" constant="20"/>
                            </constraint>
                            <constraint firstItem="OQC-hF-WpE" firstAttribute="top" secondItem="586-6w-Zm7" secondAttribute="bottom" id="hLM-ho-uKV"/>
                            <constraint firstItem="586-6w-Zm7" firstAttribute="leading" secondItem="Ij4-pN-x7x" secondAttribute="leading" id="uYy-F4-iGf"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Mode" id="IU8-fp-gpQ"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
                        <outlet property="arenaView" destination="586-6w-Zm7" id="wBg-l6-xY5"/>
                        <outlet property="messageLabel" destination="obl-W1-BOI" id="7yi-FJ-4Gu"/>
                    </connections>
                </viewController>
...
